# ascii-bg

./: README.md  install.sh  main.py  pyproject.toml  settings.json
content/: ascii-bg.desktop
src/: main.py
src/modules/: exits.py  instances.py  states_parsing.py
