[project]
name = "ascii-bg"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.1",
    "Pillow",
    "ansi2html"
]

[project.scripts]
ascii-bg = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/"]
sources = ["src"]